# bpfproxy

./: DEMO_GUIDE.md  Dockerfile.proxy  Dockerfile.traffic-gen  PROXY_INTERCEPT.md  README.md  demo_tc_mirror.sh  demo_transparent_proxy.sh  docker-compose-tc.yml  docker-compose.yml  http_server.py  proxy_server.py  test_container_proxy.sh
bpfhook-ebpf/: Cargo.toml
bpfhook-ebpf/.cargo/: config.toml
bpfhook-ebpf/src/: main.rs
bpfhook-userspace/: Cargo.toml
bpfhook-userspace/src/: main.rs
scripts/: build.sh  monitor.sh  traffic-gen.sh
