[package]
name = "bpfhook-userspace"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.5"
chrono = "0.4"

[build-dependencies]
aya = "0.13"

[[bin]]
name = "bpfhook"
path = "src/main.rs"